ament_add_gtest(test_compute_and_track_route_action test_compute_and_track_route_action.cpp)
target_link_libraries(test_compute_and_track_route_action carma_nav2_compute_and_track_route_action_bt_node)
ament_target_dependencies(test_compute_and_track_route_action ${dependencies})

ament_add_gtest(test_compute_route_action test_compute_route_action.cpp)
target_link_libraries(test_compute_route_action carma_nav2_compute_route_action_bt_node)
ament_target_dependencies(test_compute_route_action ${dependencies})
